cabal-version       : 2.4

name                : appserver
version             : 0.1.0.0

common deps
  build-depends     : base
                    , text
                    , warp
                    , servant
                    , servant-server
  default-language  : Haskell2010

library
  import            : deps
  hs-source-dirs    : lib
  exposed-modules   : Cookster.Api
                    , Cookster.AppServer
                    , Cookster.DevServer
