cabal-version       : 2.4

name                : appserver
version             : 0.1.0.0

common deps
  build-depends     : base
                    , text
                    , bytestring
                    , warp
                    , transformers
                    , freer-simple
                    , servant
                    , servant-server
                    , servant-auth-server
                    , foreign-store
                    , generics-sop
                    , jose
                    , aeson
                    , settings
                    , datalayer
  default-language  : Haskell2010

library
  import            : deps
  hs-source-dirs    : lib
  exposed-modules   : Cookster.Api
                    , Cookster.App
                    , Cookster.Auth
                    , Cookster.AppServer
                    , Cookster.DevServer
