cabal-version       : 2.4

name                : datalayer
version             : 0.1.0.0

common deps
  build-depends     : base
                    , text
                    , generics-sop
                    , squeal-postgresql
                    , postgresql-binary
  default-language  : Haskell2010

library
  import            : deps
  hs-source-dirs    : lib
  exposed-modules   : Cookster.DataLayer.Model
                    , Cookster.DataLayer.Model.Password

                    , Cookster.DataLayer.Schema
                    , Cookster.DataLayer.Queries
