cabal-version       : 2.4

name                : datalayer
version             : 0.1.0.0

common deps
  build-depends     : base
                    , text
                    , aeson
                    , bytestring
                    , bytestring-conversion
                    , bcrypt
                    , generics-sop
                    , squeal-postgresql
                    , postgresql-binary
                    , freer-simple
                    , transformers
                    , transformers-base
                    , monad-control
                    , settings
  default-language  : Haskell2010

library
  import            : deps
  hs-source-dirs    : lib
  exposed-modules   : Cookster.DataLayer.Model
                    , Cookster.DataLayer.Model.Password

                    , Cookster.DataLayer.Query
                    , Cookster.DataLayer.Schema
                    , Cookster.DataLayer.Database

                    , Cookster.DataLayer.Repository.UserRepo
                    , Cookster.DataLayer.Repository.IngredientRepo
