cabal-version       : 2.4

name                : settings
version             : 0.1.0.0

common deps
  build-depends     : base
                    , text
                    , yaml
                    , aeson
  default-language  : Haskell2010

library
  import            : deps
  hs-source-dirs    : lib
  exposed-modules   : Cookster.Settings
